...
import io.homeassistant.companion.android.util.compose.HAPreviews
import kotlinx.coroutines.launch

private val MaxContentWidth = MaxButtonWidth

@VisibleForTesting
internal const val URL_INFO_TAG = "url_info"

private const val URL_SUPPORT = "https://www.simon-apac.com/"

@Composable
internal fun ConnectionErrorScreen(
    viewModel: ConnectionViewModel,
...
